--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.3",
+    "@fortawesome/fontawesome-free-solid": "^5.0.6",
+    "@fortawesome/vue-fontawesome": "0.0.22",
+    "bootstrap": "^4.0.0",
     "botui": "^0.3.4",
     "google-translate-api": "^2.3.0",
     "vue": "^2.5.11"
@@ -32,6 +36,7 @@
     "sass-loader": "^6.0.6",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
+    "vuex": "^3.0.1",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
   }
